Fixed bug #27995 (imagefilltoborder() stops the fill process prematurely).

# Already in PHP5